* Fixed bug where closing the game with the "Enter Amount" dialog open allowed for item duplication.
* Added tooltips for stat and power upgrade buttons.
* Fixed case where stash tabs could be switched while dragging an item.
* The "Play Game" button on the title screen now goes directly to character creation if no saved games exist.
* Android: Fix 'Flare' directory not being automatically created.
* Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.

Game updates:
* Limited the number of "unique" items that can drop from a boss to 1 per kill.
* Rebalanced damage types to be less reliant on weapon stats. Players start with 15-20 damage and gain 2 per level. To compensate, weapons now have 10 base damage with an additional 3 per item level.
* Increased starting MP and MP per level by 5x. Increased starting MP regen by 5x.
* Raised the number of power points granted per level to 2.
* Only require the first level of any given power that's required to unlock another power/upgrade.
* Lowered stat requirements for all active powers. Requirements start at 2 or 3 and increase by 3 for each upgrade level.
* New item: 'Tome of Second Chances'. Used to reset the player's stat and power points. Can be purchased from Florin.
* More gradual MP cost slopes for all active powers
* Rebalance Warrior active powers
	- Shield Bash: Reduced crit chance to 25%. Added 25% chance to stun for half a second. Damage starts at higher at 115% and increases 15pp per level
	- Blood Strike: Damage starts at higher at 130% and increases 5pp per level. Bleed effect now increases 2pp per level.
	- Warcry: Raised overall MP cost, but effect lasts longer. Starts at 30s and increases 5s per level. Flat cooldown of 10s after the effect expires.
	- Throw Knife: Damage starts lower at 75% and increases 5pp per level. Accuracy bonus added, starting at 130% and increasing 5pp per level. Critical bonus added, starting at 40% and increasing 5pp per level.